--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -15,9 +15,14 @@
   
   <dependencies>
   
-  <!-- JAVA EE API -->
+  	<!-- Link back-end project -->
+  	<dependency>
+  		<groupId>net.kzn</groupId>
+  		<artifactId>shoppingbackend</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  	<!-- JAVA EE API -->
   
-  <!-- https://mvnrepository.com/artifact/javax/javaee-api -->
 	<dependency>
 	    <groupId>javax</groupId>
 	    <artifactId>javaee-api</artifactId>
